--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
-
+  	--plyr-color-main:rgb(255, 40, 40);
 
 }
 
